    * 4260 FIX: db2_logsizes: removed pprint statement
    * 4261 FIX: db2_logsizes: fixed wrong discovery condition
    * 4262 FIX: wmi_cpuload: fixed missing section handling...

    Multisite:
    * 4145 FIX: Fixed exception when setting output_format in wrong case
    * 4226 FIX: Custom inventory painters are now correctly loaded when declared with inventory_displayhints


1.2.8p15:
    Core & Setup:
    * 4078 FIX: Fixed handling of hosts with non resolvable IP addresses during runtime...

    Checks & Agents:
    * 4159 smart: added compatibility for Intel SSDs...
    * 4069 FIX: cmciii.phase: Fixed broken check with some devices...
    * 4092 FIX: if.include: fixed wrong calculated number of interfaces which are up in case of interface groups
    * 4093 FIX: oracle_tablespaces: Werk 3907 broke the space calculation...
    * 4074 FIX: check_ftp: Fixed possible wrong service description caused by unintended use of global variable
    * 3943 FIX: ntp.time: fixed parameters in discovered checks...
    * 4081 FIX: dell_powerconnect_cpu: Fixed broken metrics
    * 4126 FIX: apache_status: Handle https requests lo localhost in case of certificate mismatch...
    * 3953 FIX: diskstat: extended fix for multipath devices with or without alias...
    * 4111 FIX: hp_proliant: fixed empty data handling
    * 4099 FIX: msexch_rpcclientaccess: Previously nonfunctional WATO rule and default parameters now work...
            NOTE: Please refer to the migration notes!
    * 4112 FIX: db2_logsizes: fixed invalid data handling
    * 4100 FIX: mk_mysql: Only perform queries if mysqladmin ping is successful#...
    * 4113 FIX: postgres_locks: fixed missing include file
    * 4114 FIX: innovaphone_licenses: fixed wrong percentage calculation
    * 4115 FIX: mem.linux: fixed missing stack bug in PNP template
    * 4157 FIX: netapp_api_cluster: fixed None item
    * 4138 FIX: statgrab: Fixed issue in FreeBSD agent when statgrab is not installed