@@ -1,0 +1,9 @@
+Title: PDF export of filtered alert statistics view was always empty
+Level: 1
+Component: reporting
+Compatible: compat
+Version: 1.2.8p16
+Date: 1484125389
+Class: fix
+
+
