@@ -1110,7 +1110,6 @@ def show_view(view, show_heading = False, show_buttons = True,
     else:
         rows = []
 
-
     # Apply non-Livestatus filters
     for filter in all_active_filters:
         rows = filter.filter_table(rows)
@@ -1660,8 +1659,12 @@ def do_query_data(query, columns, add_columns, merge_column,
     query += "Columns: %s\n" % " ".join(columns)
     query += add_headers
     html.live.set_prepend_site(True)
+
     if limit != None:
         html.live.set_limit(limit + 1) # + 1: We need to know, if limit is exceeded
+    else:
+        html.live.set_limit(None)
+
     if config.debug_livestatus_queries \
             and html.output_format == "html" and 'W' in html.display_options:
         html.write('<div class="livestatus message">'
